--- a/assortment1.html
+++ b/assortment1.html
@@ -4,10 +4,7 @@
     <meta charset="utf-8">
     <title>Ассортимент 1</title>
     <meta name="description" content="">
-    <link rel="shortcut icon" href="img/favicon/favicon.ico" type="image/x-icon">
-    <link rel="apple-touch-icon" href="img/favicon/apple-touch-icon.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="img/favicon/apple-touch-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="img/favicon/apple-touch-icon-114x114.png">
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="css/main.css">
@@ -331,7 +328,7 @@
       <div class="container">
         <div class="title-wrapper">
           <h2>Закажите бесплатную партию образцов</h2>
-          <p> Бесплатно предоставляем образцы продукции при заказе <span>от 50 000</span><br>рублей. Образцы можно получить день в день с помощью курьерской <br>службы, Вам не нужно будет платить за доставку.</p>
+          <p>Бесплатно предоставляем образцы продукции при заказе <span>от 50 000</span> <span class="paragraph">рублей. Образцы можно получить день в день с помощью курьерской</span> <span class="paragraph">службы, Вам не нужно будет платить за доставку.</span></p>
         </div>
       </div>
       <div class="container">
@@ -345,11 +342,11 @@
             <label class="inp-phone">
               <input type="tel" name="free-tel" placeholder="Введите Ваш телефон" required>
             </label>
-            <button type="submit" class="button">
-              <div class="button__inner">Получить образцы бесплатно
+            <div class="button button-submit">
+              <button type="submit" class="button__inner">Получить образцы бесплатно
                 <div class="button__effect"></div>
-              </div>
-            </button>
+              </button>
+            </div>
             <p>*Оставляя заявку, Вы соглашаетесь с <a href="policy.html">политикой конфиденциальности.</a></p>
             <p>В течении 3-х минут, с Вами свяжется специалист, чтобы проконсультировать Вас по всем возникающим вопросам.</p>
             <p>Мы против спама, Ваши данные гарантированно не будут переданы третьим лицам.</p>
@@ -433,11 +430,11 @@
           <label class="inp-mail">
             <input type="tel" name="phone" placeholder="Введите ваш email" required>
           </label>
-          <button type="submit" class="button">
-            <div class="button__inner">Оставить заявку на 25 советов
+          <div class="button button-submit">
+            <button type="submit" class="button__inner">Оставить заявку на 25 советов
               <div class="button__effect"></div>
-            </div>
-          </button>
+            </button>
+          </div>
         </form>
       </div>
       <div class="container">
@@ -610,7 +607,7 @@
     <footer>
       <div class="container">
         <div>2007-2018 «МЛВ Проф»</div><a href="policy.html">Политика конфиденциальности</a>
-        <div><span>ОГРН 1187746439759</span><span>ИНН 7743253950</span><span>КПП 774301001</span></div>
+        <div class="footer-requisites"><span>ОГРН 1187746439759</span><span>ИНН 7743253950</span><span>КПП 774301001</span></div>
       </div>
     </footer>
     <div id="header-phone-popup" class="popup popup-header-phone mfp-hide">
