--- a/assortment3.html
+++ b/assortment3.html
@@ -4,10 +4,7 @@
     <meta charset="utf-8">
     <title>Ассортимент 3</title>
     <meta name="description" content="">
-    <link rel="shortcut icon" href="img/favicon/favicon.ico" type="image/x-icon">
-    <link rel="apple-touch-icon" href="img/favicon/apple-touch-icon.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="img/favicon/apple-touch-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="img/favicon/apple-touch-icon-114x114.png">
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="css/main.css">
@@ -332,7 +329,7 @@
       <div class="container">
         <div class="title-wrapper">
           <h2>Закажите бесплатную партию образцов</h2>
-          <p> Бесплатно предоставляем образцы продукции при заказе <span>от 50 000</span><br>рублей. Образцы можно получить день в день с помощью курьерской <br>службы, Вам не нужно будет платить за доставку.</p>
+          <p>Бесплатно предоставляем образцы продукции при заказе <span>от 50 000</span> <span class="paragraph">рублей. Образцы можно получить день в день с помощью курьерской</span> <span class="paragraph">службы, Вам не нужно будет платить за доставку.</span></p>
         </div>
       </div>
       <div class="container">
@@ -611,7 +608,7 @@
     <footer>
       <div class="container">
         <div>2007-2018 «МЛВ Проф»</div><a href="policy.html">Политика конфиденциальности</a>
-        <div><span>ОГРН 1187746439759</span><span>ИНН 7743253950</span><span>КПП 774301001</span></div>
+        <div class="footer-requisites"><span>ОГРН 1187746439759</span><span>ИНН 7743253950</span><span>КПП 774301001</span></div>
       </div>
     </footer>
     <div id="header-phone-popup" class="popup popup-header-phone mfp-hide">
