--- a/manual.html
+++ b/manual.html
@@ -4,17 +4,14 @@
     <meta charset="utf-8">
     <title>Руководство рассылки</title>
     <meta name="description" content="">
-    <link rel="shortcut icon" href="img/favicon/favicon.ico" type="image/x-icon">
-    <link rel="apple-touch-icon" href="img/favicon/apple-touch-icon.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="img/favicon/apple-touch-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="img/favicon/apple-touch-icon-114x114.png">
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
     <!-- Здесь пишем код-->
-    <header class="header header--manual">
+    <header class="header header--manual no-mouseout-popup">
       <div class="header-top">
         <div class="container"><a href="index.html" class="header-logo"><img src="img/logo-top.png" alt="alt"><span>Завод<br> анодирования</span></a>
           <div class="header-contacts">
@@ -72,7 +69,7 @@
     <footer>
       <div class="container">
         <div>2007-2018 «МЛВ Проф»</div><a href="policy.html">Политика конфиденциальности</a>
-        <div><span>ОГРН 1187746439759</span><span>ИНН 7743253950</span><span>КПП 774301001</span></div>
+        <div class="footer-requisites"><span>ОГРН 1187746439759</span><span>ИНН 7743253950</span><span>КПП 774301001</span></div>
       </div>
     </footer>
     <div id="header-phone-popup" class="popup popup-header-phone mfp-hide">
