--- a/assortment1.html
+++ b/assortment1.html
@@ -593,9 +593,9 @@
           <label class="inp-phone">
             <input type="number" name="phone" placeholder="Введите ваш телефон" required>
           </label>
-          <button type="submit" class="button">
-            <div class="button__inner">Получить коммерческое предложение</div>
-          </button>
+          <div class="button button-submit">
+            <button type="submit" class="button__inner">Получить коммерческое предложение</button>
+          </div>
           <div class="form-bottom">
             <label>
               <input type="checkbox" name="personal-data" checked required><span class="checkbox-custom"></span><span>Я даю согласие на обработку <a href="policy.html">персональных данных</a></span>
@@ -640,9 +640,9 @@
           <label class="inp-phone">
             <input type="number" name="phone" placeholder="Введите ваш телефон" required>
           </label>
-          <button type="submit" class="button">
-            <div class="button__inner">Перезвонить мне</div>
-          </button>
+          <div class="button button-submit">
+            <button type="submit" class="button__inner">Перезвонить мне</button>
+          </div>
           <div class="form-bottom">
             <label>
               <input type="checkbox" name="personal-data" checked required><span class="checkbox-custom"></span><span>Я даю согласие на обработку <a href="policy.html">персональных данных</a></span>
@@ -661,9 +661,9 @@
         <label class="inp-phone">
           <input type="number" name="phone" placeholder="Введите ваш телефон" required>
         </label>
-        <button type="submit" class="button">
-          <div class="button__inner">Получить коммерческое предложение</div>
-        </button>
+        <div class="button button-submit">
+          <button type="submit" class="button__inner">Получить коммерческое предложение</button>
+        </div>
         <div class="form-bottom">
           <label>
             <input type="checkbox" name="personal-data" checked required><span class="checkbox-custom"></span><span>Я даю согласие на обработку <a href="policy.html">персональных данных</a></span>
