--- a/assortment4.html
+++ b/assortment4.html
@@ -340,11 +340,11 @@
             <label class="inp-phone">
               <input type="tel" name="free-tel" placeholder="Введите Ваш телефон" required>
             </label>
-            <button type="submit" class="button">
-              <div class="button__inner">Получить образцы бесплатно
+            <div class="button button-submit">
+              <button type="submit" class="button__inner">Получить образцы бесплатно
                 <div class="button__effect"></div>
-              </div>
-            </button>
+              </button>
+            </div>
             <p>*Оставляя заявку, Вы соглашаетесь с <a href="policy.html">политикой конфиденциальности.</a></p>
             <p>В течении 3-х минут, с Вами свяжется специалист, чтобы проконсультировать Вас по всем возникающим вопросам.</p>
             <p>Мы против спама, Ваши данные гарантированно не будут переданы третьим лицам.</p>
@@ -428,11 +428,11 @@
           <label class="inp-mail">
             <input type="tel" name="phone" placeholder="Введите ваш email" required>
           </label>
-          <button type="submit" class="button">
-            <div class="button__inner">Оставить заявку на 25 советов
+          <div class="button button-submit">
+            <button type="submit" class="button__inner">Оставить заявку на 25 советов
               <div class="button__effect"></div>
-            </div>
-          </button>
+            </button>
+          </div>
         </form>
       </div>
       <div class="container">
@@ -591,9 +591,9 @@
           <label class="inp-phone">
             <input type="number" name="phone" placeholder="Введите ваш телефон" required>
           </label>
-          <button type="submit" class="button">
-            <div class="button__inner">Получить коммерческое предложение</div>
-          </button>
+          <div class="button button-submit">
+            <button type="submit" class="button__inner">Получить коммерческое предложение</button>
+          </div>
           <div class="form-bottom">
             <label>
               <input type="checkbox" name="personal-data" checked required><span class="checkbox-custom"></span><span>Я даю согласие на обработку <a href="policy.html">персональных данных</a></span>
@@ -638,9 +638,9 @@
           <label class="inp-phone">
             <input type="number" name="phone" placeholder="Введите ваш телефон" required>
           </label>
-          <button type="submit" class="button">
-            <div class="button__inner">Перезвонить мне</div>
-          </button>
+          <div class="button button-submit">
+            <button type="submit" class="button__inner">Перезвонить мне</button>
+          </div>
           <div class="form-bottom">
             <label>
               <input type="checkbox" name="personal-data" checked required><span class="checkbox-custom"></span><span>Я даю согласие на обработку <a href="policy.html">персональных данных</a></span>
@@ -659,9 +659,9 @@
         <label class="inp-phone">
           <input type="number" name="phone" placeholder="Введите ваш телефон" required>
         </label>
-        <button type="submit" class="button">
-          <div class="button__inner">Получить коммерческое предложение</div>
-        </button>
+        <div class="button button-submit">
+          <button type="submit" class="button__inner">Получить коммерческое предложение</button>
+        </div>
         <div class="form-bottom">
           <label>
             <input type="checkbox" name="personal-data" checked required><span class="checkbox-custom"></span><span>Я даю согласие на обработку <a href="policy.html">персональных данных</a></span>
