--- a/assortment2.html
+++ b/assortment2.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta content="telephone=no" name="format-detection">
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
